--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="secondary_teal">#003333</color>
     <color name="light_mint">#D5E8D4</color>
     <color name="bg_light">#F5F7F7</color>
+    <color name="background_light">#F5F7F7</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray_text">#757575</color>
