--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:background">@drawable/bg_remote_button_circular</item>
         <item name="android:padding">20dp</item>
         <item name="android:scaleType">centerInside</item>
-        <item name="app:tint">@color/primary_teal</item>
+        <item name="android:tint">@color/primary_teal</item>
     </style>
 
     <style name="RemoteButton.Circular">
@@ -31,7 +31,7 @@
     <style name="AcModeIcon">
         <item name="android:layout_width">24dp</item>
         <item name="android:layout_height">24dp</item>
-        <item name="app:tint">@color/gray_text</item>
+        <item name="android:tint">@color/gray_text</item>
     </style>
 
     <style name="AcModeText">
